--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.17.0",
     "@coinbase/wallet-sdk": "^4.0.0",
-    "wagmi": "^2.5.0",
-    "viem": "^2.7.0",
     "@moonwell-fi/moonwell-sdk": "^1.0.0",
-    "zustand": "^4.4.7",
+    "@tanstack/react-query": "^5.17.0",
+    "clsx": "^2.1.0",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^23.7.0",
-    "react-i18next": "^14.0.0",
     "lucide-react": "^0.263.1",
     "qrcode.react": "^3.1.0",
-    "html5-qrcode": "^2.3.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "clsx": "^2.1.0"
+    "react-i18next": "^14.0.0",
+    "viem": "^2.7.0",
+    "wagmi": "^2.5.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^24.7.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "vite-plugin-pwa": "^0.17.0"
   }
 }
