--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/coinbase-sdk": "^0.25.0",
     "@coinbase/wallet-sdk": "^4.0.0",
     "@moonwell-fi/moonwell-sdk": "^1.0.0",
     "@tanstack/react-query": "^5.17.0",
@@ -15,12 +16,13 @@
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.7.0",
     "lucide-react": "^0.263.1",
+    "permissionless": "^0.2.57",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
-    "viem": "^2.7.0",
+    "viem": "^2.38.2",
     "wagmi": "^2.5.0",
     "zustand": "^4.4.7"
   },
