--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
+# Coinbase Wallet
 VITE_COINBASE_WALLET_PROJECT_ID=747a6e4d-83a1-49cf-a335-0be9c24dddec
-VITE_BASE_RPC_URL=https://mainnet.base.org
+
+# Pimlico for ERC20 Paymaster
+VITE_PIMLICO_API_KEY=pim_ex2HBZhy1ov1NZNc9prs36
+
+# Keep existing
+# Better RPC endpoint (no rate limits)
+VITE_BASE_RPC_URL=https://base.llamarpc.com
 VITE_BASE_CHAIN_ID=8453
 VITE_MOONWELL_CBBTC_MARKET=0x3bf93770f2d4a794c3d9EBEfBAeBAE2a8f09A5E5
 VITE_MOONWELL_USDC_MARKET=0xEdc817A28E8B93B03976FBd4a3dDBc9f7D176c22
 VITE_DEV_WALLET=0xa5fad283d9b6ffbdf554c2966a09d8fccf4fbe3e
 VITE_LUMA_VAULT_ADDRESS=0xf00c7549e435950887afb37d08b25c60e518efe1
-VITE_PIMLICO_API_KEY=pim_ex2HBZhy1ov1NZNc9prs36
-VITE_COINGECKO_API_KEY=
