--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ VITE_MOONWELL_CBBTC_MARKET=0x3bf93770f2d4a794c3d9EBEfBAeBAE2a8f09A5E5
 VITE_MOONWELL_USDC_MARKET=0xEdc817A28E8B93B03976FBd4a3dDBc9f7D176c22
 VITE_DEV_WALLET=0xa5fad283d9b6ffbdf554c2966a09d8fccf4fbe3e
 VITE_LUMA_VAULT_ADDRESS=0xf00c7549e435950887afb37d08b25c60e518efe1
+VITE_LUMA_USDC_VAULT_ADDRESS=0x4d1be3db191065d66edbdfb0df1f0507ca10da7d
