feat: add CDP Embedded Wallet with Smart Account support

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Coinbase Wallet
 VITE_COINBASE_WALLET_PROJECT_ID=747a6e4d-83a1-49cf-a335-0be9c24dddec
+VITE_CDP_PROJECT_ID=747a6e4d-83a1-49cf-a335-0be9c24dddec
 
 # Pimlico for ERC20 Paymaster
 VITE_PIMLICO_API_KEY=pim_ex2HBZhy1ov1NZNc9prs36
