--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/cdp-core": "^0.0.47",
+    "@coinbase/cdp-wagmi": "^0.0.47",
     "@coinbase/wallet-sdk": "^4.3.7",
     "@moonwell-fi/moonwell-sdk": "^1.0.0",
     "@tanstack/react-query": "^5.17.0",
