Add Circle Paymaster integration - users pay gas in USDC

--- a/.env
+++ b/.env
@@ -5,12 +5,17 @@ VITE_CDP_PROJECT_ID=747a6e4d-83a1-49cf-a335-0be9c24dddec
 # Pimlico for ERC20 Paymaster
 VITE_PIMLICO_API_KEY=pim_ex2HBZhy1ov1NZNc9prs36
 
-# Keep existing
 # Better RPC endpoint (no rate limits)
 VITE_BASE_RPC_URL=https://base.llamarpc.com
 VITE_BASE_CHAIN_ID=8453
+
+# Moonwell Markets
 VITE_MOONWELL_CBBTC_MARKET=0x3bf93770f2d4a794c3d9EBEfBAeBAE2a8f09A5E5
 VITE_MOONWELL_USDC_MARKET=0xEdc817A28E8B93B03976FBd4a3dDBc9f7D176c22
+
+# Dev Wallet
 VITE_DEV_WALLET=0xa5fad283d9b6ffbdf554c2966a09d8fccf4fbe3e
-VITE_LUMA_VAULT_ADDRESS=0xf00c7549e435950887afb37d08b25c60e518efe1
+
+# Luma Vaults
+VITE_LUMA_BTC_VAULT_ADDRESS=0xf00c7549e435950887afb37d08b25c60e518efe1
 VITE_LUMA_USDC_VAULT_ADDRESS=0x4d1be3db191065d66edbdfb0df1f0507ca10da7d
